# achievno

./: .env.preprod.example  .gitignore  AGENTS.md  README.md  achievno_mvp_delivery_contract_v1_2.yaml
app/server/: Containerfile  manage.py  pyproject.toml
app/server/app/: config.py  main.py
app/server/app/api/v1/: telegram.py
app/server/app/schemas/: telegram.py
app/server/app/services/: telegram_init_data.py
app/server/apps/accounts/api/: serializers.py  urls.py  views.py
app/server/apps/accounts/application/: auth_service.py
app/server/apps/accounts/domain/: errors.py
app/server/apps/accounts/infrastructure/: authentication.py  email.py  models.py  repositories.py  tokens.py
app/server/apps/accounts/tests/: test_auth_api.py  test_auth_smoke_command.py
app/server/apps/achievements/api/: serializers.py  urls.py  views.py
app/server/apps/achievements/application/: approval_service.py  evidence_service.py  personal_query.py  personal_service.py
app/server/apps/achievements/domain/: errors.py
app/server/apps/achievements/infrastructure/: approval_repositories.py  models.py  procedures.py  repositories.py
app/server/apps/achievements/tests/: test_personal_achievements_api.py  test_personal_achievements_smoke_command.py
app/server/apps/challenges/api/: serializers.py  urls.py  views.py
app/server/apps/challenges/application/: challenge_query.py  challenge_service.py
app/server/apps/challenges/domain/: errors.py
app/server/apps/challenges/infrastructure/: models.py  repositories.py
app/server/config/: asgi.py  settings.py  urls.py  wsgi.py
(+230 files in other folders)
