[project]
name = "achievno-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2.0",
  "djangorestframework>=3.16.0",
  "django-cors-headers>=4.7.0",
  "dj-database-url>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.13.0",
  "gunicorn>=26.0.0",
  "boto3>=1.43.22",
]

[dependency-groups]
dev = []
